--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -42,16 +42,16 @@
 
 
 
-    <div class="relative bg-[#5e875f] h-screen pt-64  overflow-hidden">
+    <div class="relative bg-[#5e875f] h-[640px] lg:h-screen pt-64  overflow-hidden">
         <!-- Bunga kiri -->
         <img src="../static/flower.png" class="absolute bottom-[-40px] left-[-120px] w-[280px] md:w-[320px] lg:w-[400px] -scale-x-100" alt="flower">
         <!-- Bunga kanan -->
         <img src="../static/flower.png" class="absolute bottom-[-40px] right-[-120px] w-[280px] md:w-[320px] lg:w-[400px]" alt="flower">
 
-        <div class="flex justify-center text-2xl lg:text-5xl px-10 text-white font-bold">
+        <div class="flex justify-center text-3xl lg:text-5xl px-10 text-white font-bold">
             <h5>Modern Farming Solutions</h5>
         </div>
-        <div class="flex justify-center lg:text-2xl text-center lg:px-44 px-10 mt-5 text-[#F0F7D2] text-lg">
+        <div class="flex justify-center lg:text-2xl text-center lg:px-44 px-10 mt-5 text-[#F0F7D2] text-xl">
             An integrated platform to help farmers increase yields, get the best seed recommendations, detect plant diseases, and connect with the market.
         </div>
         <div class="w-full flex justify-center items-center">
@@ -66,79 +66,79 @@
             <div class="flex justify-center text-3xl text-[#537D5D] font-bold ">
                 <h5>Main Feature</h5>
             </div>
-            <div class="flex justify-center text-center px-8 mt-5 text-lg lg:text-xl  text-gray-600" >
+            <div class="flex justify-center text-center px-8 mt-5 text-xl  text-gray-600" >
                 Improve your agricultural productivity with the latest technology
             </div>
-            <div class="h-32 rounded-2xl bg-white mt-5 lg:mt-10 shadow-md shadow-gray-600">
-                <div class="flex w-full h-full justify-center lg:justify-start lg:pl-10 items-center gap-x-5">
+            <div class=" rounded-2xl bg-white py-4  mt-5 lg:mt-10 shadow-md shadow-gray-600">
+                <a href="/price" class="flex w-full  h-full justify-center lg:justify-start lg:pl-10 items-center gap-x-5">
                     <div >
-                        <img src="../static/chart.png" class="w-7 h-7 lg:w-10 lg:h-10" alt="">
+                        <img src="../static/chart.png" class="w-9 " alt="">
                     </div>
                     <div class="w-3/4 ">
-                        <div class="flex text-lg lg:text-2xl  text-[#537D5D] font-semibold ">
-                            <h5>Main Feature</h5>
+                        <div class="flex text-2xl text-[#537D5D] font-semibold ">
+                            <h5>Harvest Price Trends</h5>
                         </div>
-                        <div class=" text-sm lg:text-base text-gray-600">
+                        <div class="text-md text-gray-600">
                             Get the latest information on monthly harvest price trends with easy-to-understand visualizations. Plan your harvest time properly to maximize profits
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
-            <div class="h-32 rounded-2xl bg-white mt-5 lg:mt-10 shadow-md shadow-gray-600">
-                <div class="flex w-full h-full justify-center lg:justify-start lg:pl-10 items-center gap-x-5">
+            <div class="py-4 rounded-2xl bg-white mt-5 lg:mt-10 shadow-md shadow-gray-600">
+                <a href="/seed" class="flex w-full h-full justify-center lg:justify-start lg:pl-10 items-center gap-x-5">
                     <div >
-                        <img src="../static/hand_plant.png" class="w-7 h-7 lg:w-10 lg:h-10" alt="">
+                        <img src="../static/hand_plant.png" class="w-9 " alt="">
                     </div>
                     <div class="w-3/4 ">
                         <div class="flex text-lg lg:text-2xl  text-[#537D5D] font-semibold ">
                             <h5>Best Seed Recommendations</h5>
                         </div>
-                        <div class=" text-sm lg:text-base text-gray-600">
+                        <div class=" text-md text-gray-600">
                             Our intelligent system will recommend the best seeds based on region, resources, and weather forecasts for up to one year ahead
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
-            <div class="h-32 rounded-2xl bg-white mt-5 lg:mt-10 shadow-md shadow-gray-600">
-                <div class="flex w-full h-full justify-center lg:justify-start lg:pl-10 items-center gap-x-5">
-                    <div >
-                        <img src="../static/find.png" class="w-7 h-7 lg:w-10 lg:h-10" alt="">
+            <div class="py-4 rounded-2xl bg-white mt-5 lg:mt-10 shadow-md shadow-gray-600">
+                <a href="/disease" class="flex w-full h-full justify-center lg:justify-start lg:pl-10 items-center gap-x-5">
+                    <div>
+                        <img src="../static/find.png" class="w-9" alt="">
                     </div>
                     <div class="w-3/4 ">
                         <div class="flex text-lg lg:text-2xl  text-[#537D5D] font-semibold ">
                             <h5>Plant Disease Detection</h5>
                         </div>
-                        <div class=" text-sm lg:text-base text-gray-600">
+                        <div class=" text-md text-gray-600">
                             Upload photos of your crops and our AI system will detect diseases and provide treatment recommendations
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
-            <div class="h-32 rounded-2xl bg-white mt-5 lg:mt-10 shadow-md shadow-gray-600">
-                <div class="flex w-full h-full justify-center lg:justify-start lg:pl-10 items-center gap-x-5">
+            <div class="py-4 rounded-2xl bg-white mt-5 lg:mt-10 shadow-md shadow-gray-600">
+                <a href="/market" class="flex w-full h-full justify-center lg:justify-start lg:pl-10 items-center gap-x-5">
                     <div >
-                        <img src="../static/market.png" class="w-7 h-7 lg:w-10 lg:h-10" alt="">
+                        <img src="../static/market.png" class="w-9 " alt="">
                     </div>
                     <div class="w-3/4 ">
                         <div class="flex text-lg lg:text-2xl  text-[#537D5D] font-semibold ">
                             <h5>Marketplace</h5>
                         </div>
-                        <div class=" text-sm lg:text-base text-gray-600">
+                        <div class=" text-md text-gray-600">
                             Buy Harvest directly on online marketplace
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
-            <div class="h-32 rounded-2xl bg-white mt-5 lg:mt-10 shadow-md shadow-gray-600">
-                <div class="flex w-full h-full justify-center lg:justify-start lg:pl-10 items-center gap-x-5">
-                    <div >
-                        <img src="../static/chat.png" class="w-7 h-7 lg:w-10 lg:h-10" alt="">
+            <div class="py-4 rounded-2xl bg-white mt-5 lg:mt-10 shadow-md shadow-gray-600">
+                <div onclick="toggleChatToggle()" class="flex w-full h-full justify-center lg:justify-start lg:pl-10 items-center gap-x-5">
+                    <div>
+                        <img src="../static/chat.png" class="w-9 " alt="">
                     </div>
                     <div class="w-3/4 ">
                         <div class="flex text-lg lg:text-2xl  text-[#537D5D] font-semibold ">
                             <h5>Chatbot</h5>
                         </div>
-                        <div class=" text-sm lg:text-base text-gray-600">
+                        <div class=" text-md text-gray-600">
                             Ask anything about farming and you will get a direct answer
                         </div>
                     </div>
@@ -147,38 +147,38 @@
         </div>
     </div>
     <div class="h-fit py-10 bg-[#537D5D] pl-10 pr-32 mt-16 lg:flex lg:justify-between">
-    <div class="mb-8 lg:w-[25%]">
-        <div class="mb-4 text-2xl font-semibold underline text-white">Si Panen</div>
-        <div class=" text-white">A modern agriculture platform to increase productivity and the welfare of Indonesian farmers.</div>
-    </div>
-    <div class="mb-8 ">
-        <div class="mb-4 text-2xl font-semibold underline text-white">Si Panen</div>
-        <div class=" text-white">
-            <ul>Harvest Price Trends</ul>
-            <ul>Best Seed Recomendations</ul>
-            <ul>Plant Disease Detection</ul>
-            <ul>Chatbot & Market</ul>
+        <div class="mb-8 lg:w-[25%]">
+            <div class="mb-4 text-2xl font-semibold underline text-white">Si Panen</div>
+            <div class=" text-white">A modern agriculture platform to increase productivity and the welfare of Indonesian farmers.</div>
+        </div>
+        <div class="mb-8 ">
+            <div class="mb-4 text-2xl font-semibold underline text-white">Si Panen</div>
+            <div class=" text-white">
+                <ul>Harvest Price Trends</ul>
+                <ul>Best Seed Recomendations</ul>
+                <ul>Plant Disease Detection</ul>
+                <ul>Chatbot & Market</ul>
+            </div>
+        </div>
+        <div class="mb-8">
+            <div class="mb-4 text-2xl font-semibold underline text-white">Help</div>
+            <div class=" text-white">
+                <ul>FAQ</ul>
+                <ul>User Guides</ul>
+                <ul>Contact Us</ul>
+                <ul>Privacy Policy</ul>
+            </div>
+        </div>
+        <div class="mb-8">
+            <div class="mb-4 text-2xl font-semibold underline text-white">Contact</div>
+            <div class=" text-white">
+                <ul>FAQ</ul>
+                <ul>User Guides</ul>
+                <ul>Contact Us</ul>
+                <ul>Privacy Policy</ul>
+            </div>
         </div>
     </div>
-    <div class="mb-8">
-        <div class="mb-4 text-2xl font-semibold underline text-white">Help</div>
-        <div class=" text-white">
-            <ul>FAQ</ul>
-            <ul>User Guides</ul>
-            <ul>Contact Us</ul>
-            <ul>Privacy Policy</ul>
-        </div>
-    </div>
-    <div class="mb-8">
-        <div class="mb-4 text-2xl font-semibold underline text-white">Contact</div>
-        <div class=" text-white">
-            <ul>FAQ</ul>
-            <ul>User Guides</ul>
-            <ul>Contact Us</ul>
-            <ul>Privacy Policy</ul>
-        </div>
-    </div>
-</div>
 
 <!-- <div class="fixed bottom-5 right-5 z-10 flex flex-col items-end gap-2">
     <div id="chatBox" class="transform scale-0 origin-bottom-right transition-transform duration-300 ease-in-out w-[400px] h-[440px] bg-white shadow-lg rounded-lg border border-gray-300 flex flex-col">
@@ -213,6 +213,10 @@
 
 
 <script>
+    function toggleChatToggle() {
+        document.getElementById("chatToggleBtn").click();
+    }
+    
     function toggleMenu() {
         const menu = document.getElementById('mobileMenu');
         const overlay = document.getElementById('overlay');
