--- a/api/templates/camera.html
+++ b/api/templates/camera.html
@@ -63,7 +63,7 @@
         
         <div class="flex flex-col items-center mt-8 px-4 md:px-28">
             <h1 class="text-3xl font-bold text-center text-[#537D5D] mb-4">Plant Disease Detection</h1>
-            <p class="text-gray-600">Take a photo of your plant to detect diseases and get treatment suggestions</p>
+            <p class="text-gray-600 text-lg">Take a photo of your plant to detect diseases and get treatment suggestions</p>
         </div>
         <div class="w-[95%] md:w-[85%] bg-white shadow-lg rounded-lg flex justify-center py-4  mt-8 mb-16 md:px-28">
             <div id="tutor" class=" text-center flex flex-col items-center justify-center gap-4 px-4 mb-8">
