--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -42,16 +42,16 @@
 
 
 
-    <div class="relative bg-[#5e875f] h-[640px] lg:h-screen pt-64  overflow-hidden">
+    <div class="relative bg-[#5e875f] h-[1320px] lg:h-[640px] pt-[600px] lg:pt-64 overflow-hidden">
         <!-- Bunga kiri -->
         <img src="../static/flower.png" class="absolute bottom-[-40px] left-[-120px] w-[280px] md:w-[320px] lg:w-[400px] -scale-x-100" alt="flower">
         <!-- Bunga kanan -->
         <img src="../static/flower.png" class="absolute bottom-[-40px] right-[-120px] w-[280px] md:w-[320px] lg:w-[400px]" alt="flower">
 
-        <div class="flex justify-center text-3xl lg:text-5xl px-10 text-white font-bold">
+        <div class="flex justify-center text-5xl px-10 text-white font-bold">
             <h5>Modern Farming Solutions</h5>
         </div>
-        <div class="flex justify-center lg:text-2xl text-center lg:px-44 px-10 mt-5 text-[#F0F7D2] text-xl">
+        <div class="flex justify-center text-2xl text-center lg:px-44 px-10 mt-5 text-[#F0F7D2]">
             An integrated platform to help farmers increase yields, get the best seed recommendations, detect plant diseases, and connect with the market.
         </div>
         <div class="w-full flex justify-center items-center">
