ini udah fix ke 3 AWAS ADA LAGI YA

--- a/api/templates/market.html
+++ b/api/templates/market.html
@@ -65,7 +65,7 @@
                                 <div class="h-[1px] w-full bg-black mb-2"></div>
                                 <div>
                                     <div class="flex justify-center lg:text-base  text-gray-800 font-semibold ">
-                                        <h5>Main Feature</h5>
+                                        <h5>Ciherang Rice</h5>
                                     </div>
                                     <div class="flex justify-center text-xs lg:text-xs  text-gray-800 font-base ">
                                         <h5>New Arrival</h5>
@@ -92,13 +92,13 @@
                                 <div class="h-[1px] w-full bg-black mb-2"></div>
                                 <div>
                                     <div class="flex justify-center lg:text-base  text-gray-800 font-semibold ">
-                                        <h5>Main Feature</h5>
+                                        <h5>IR64 Rice</h5>
                                     </div>
                                     <div class="flex justify-center text-xs lg:text-xs  text-gray-800 font-base ">
                                         <h5>New Arrival</h5>
                                     </div>
                                     <div class="flex justify-center lg:text-base  text-[#537D5D] font-semibold ">
-                                        <h5>Rp 14.000/Kg</h5>
+                                        <h5>Rp 15.000/Kg</h5>
                                     </div>
                                     <div class="flex justify-center mt-2 ">
                                         <a href="https://shopee.co.id/" class="py-[1px] px-6  text-xs bg-[#537D5D] text-center text-white font-semibold rounded-md  shadow-md shadow-gray-600">
@@ -119,13 +119,13 @@
                                 <div class="h-[1px] w-full bg-black mb-2"></div>
                                 <div>
                                     <div class="flex justify-center lg:text-base  text-gray-800 font-semibold ">
-                                        <h5>Main Feature</h5>
+                                        <h5>Inpari 32 Rice</h5>
                                     </div>
                                     <div class="flex justify-center text-xs lg:text-xs  text-gray-800 font-base ">
-                                        <h5>New Arrival</h5>
+                                        <h5>Trending</h5>
                                     </div>
                                     <div class="flex justify-center lg:text-base  text-[#537D5D] font-semibold ">
-                                        <h5>Rp 14.000/Kg</h5>
+                                        <h5>Rp 16.000/Kg</h5>
                                     </div>
                                     <div class="flex justify-center mt-2 ">
                                         <a href="https://shopee.co.id/" class="py-[1px] px-6  text-xs bg-[#537D5D] text-center text-white font-semibold rounded-md  shadow-md shadow-gray-600">
@@ -146,13 +146,13 @@
                                 <div class="h-[1px] w-full bg-black mb-2"></div>
                                 <div>
                                     <div class="flex justify-center lg:text-base  text-gray-800 font-semibold ">
-                                        <h5>Main Feature</h5>
+                                        <h5>Hybrid Corn P21</h5>
                                     </div>
                                     <div class="flex justify-center text-xs lg:text-xs  text-gray-800 font-base ">
-                                        <h5>New Arrival</h5>
+                                        <h5>Trending</h5>
                                     </div>
                                     <div class="flex justify-center lg:text-base  text-[#537D5D] font-semibold ">
-                                        <h5>Rp 14.000/Kg</h5>
+                                        <h5>Rp 17.000/Kg</h5>
                                     </div>
                                     <div class="flex justify-center mt-2 ">
                                         <a href="https://shopee.co.id/" class="py-[1px] px-6  text-xs bg-[#537D5D] text-center text-white font-semibold rounded-md  shadow-md shadow-gray-600">
@@ -173,13 +173,13 @@
                                 <div class="h-[1px] w-full bg-black mb-2"></div>
                                 <div>
                                     <div class="flex justify-center lg:text-base  text-gray-800 font-semibold ">
-                                        <h5>Main Feature</h5>
+                                        <h5>Hybrid Corn P21</h5>
                                     </div>
                                     <div class="flex justify-center text-xs lg:text-xs  text-gray-800 font-base ">
-                                        <h5>New Arrival</h5>
+                                        <h5>Trending</h5>
                                     </div>
                                     <div class="flex justify-center lg:text-base  text-[#537D5D] font-semibold ">
-                                        <h5>Rp 14.000/Kg</h5>
+                                        <h5>Rp 18.000/Kg</h5>
                                     </div>
                                     <div class="flex justify-center mt-2 ">
                                         <a href="https://shopee.co.id/" class="py-[1px] px-6  text-xs bg-[#537D5D] text-center text-white font-semibold rounded-md  shadow-md shadow-gray-600">
